--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix-eureka-client</artifactId>
+            <version>2.0.0.RC2</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
