--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,11 @@ zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
 eureka.client.fetch-registry=false
 eureka.client.register-with-eureka=false
 
+# Enabling H2 Console
+spring.h2.console.enabled=true
+#Turn Statistics on
+spring.jpa.properties.hibernate.generate_statistics=true
+# Show all queries
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
